[metadata]
name = dash-blueprint-components-docs
version = attr: dash_blueprint_components_docs.__version__
author = Stefano Gianbattista Fanizzi
author_mail = stefano.fanizzi@outlook.com
long_description = file: README.md
classifiers=
    Framework :: dash
    Development Status :: 1
    Environment :: 
    Intended Audience :: End Users/Desktop
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3.12
project_urls =
  Bug Reports = https://github.com/STEdyd666/dash-blueprint-components-docs/issues,
  Source: https = //github.com/STEdyd666/dash-blueprint-components-docs
  Documentation = https://dash-blueprint-components.com/blueprint

[options]
package_dir = 
    = src
python_requires = >=3.10
packages = find:
install_requires =
  dash
  dash_blueprint_components
  importlib_resources
  python-dateutil
  gunicorn

include_package_data = True

[options.packages.find]
where = src